@@ -787,6 +787,7 @@ pm-sodium-advanced-air-filter-cleaning=Sodium advanced air filter cleaning
 pm-sodium-air-filter-cleaning=Sodium air filter cleaning
 pm-hydrogen-iodide-seperation=Hydrogen iodide seperation
 pm-iodine-vanadate-solution-seperation=Iodine vanadate solution seperation
+pm-vanadate-solution-seperation=vanadate solution seperation
 pm-caesium-iodine-to-antimony=Caesium iodine to antimony chloride
 pm-caesium-antimony-to-iodine=Caesium antimony to iodine
 pm-caesium-hexachlorocerate-seperation=Caesium hexachlorocerate seperation
@@ -838,7 +839,7 @@ pm-titanium-lightweight-framing=Titanium lightweight Framing
 pm-copper-basic-wiring=Copper basic wiring
 pm-aluminium-basic-wiring=Aluminium basic wiring
 pm-refinery-gas-reforming=Refinery gas reforming
-pm-oil-residual-reforming=Oil residual reforming
+pm-oil-residuals-reforming=Oil residuals reforming
 pm-petrol-reforming=Petrol reforming
 pm-naptha-reforming=Naptha reforming
 pm-diesel-reforming=Diesel reforming
@@ -960,14 +961,16 @@ pm-lithium-sulfur-battery-equipment=Lithium battery equipment
 pm-lithium-sulfur-battery-mk2-equipment=Lithium battery MK2 equipment
 pm-spent-fuel-rod-reprocessing=Spent fuel rod reprocessing
 pm-cinnabar-processing=Mercury ore leeching
-pm-chromic-cinnabar-processing=Chronmic mercury ore leeching
+pm-chromic-cinnabar-processing=Chromic mercury ore leeching
 pm-silver-leeching=Silver leeching
 pm-chromic-silver-leeching=Chromic silver leeching
 pm-silver-chunk-refining=Silver chunk refining
 pm-titanium-leeching=Titanium leeching
 pm-chromic-titanium-leeching=Chromic titanium leeching
-pm-titanium-chunk-oxidsing=Titanium chunk oxidising
-pm-tungsten-crusing=Tungsten crushing
+pm-titanium-chunk-oxidising=Titanium chunk oxidising
+pm-tungsten-leeching=Tungsten leeching
+pm-chromic-tungsten-leeching=Chromic tungsten leeching
+pm-tungsten-crushing=Tungsten crushing
 pm-zirconium-leeching=Zirconium leeching
 pm-zirconium-sand-filtering=Zirconium sand filtering
 pm-zirconium=Zirconium ore
@@ -976,12 +979,12 @@ pm-bitumen-creosote=Bitumen-based creosote
 pm-zinc-chunk-seperation=Zinc chunk seperation
 pm-zinc-tailings-condensing=Zinc tailings condensing
 pm-magnetite-forming=Magnetite forming
-pm-ammonium-vandate-solution=Ammonium vandate solution
-pm-vandate-solution=Vandate solution
-pm-chromium-leeching=Chromium leeching
-pm-chromic-chromium-leeching=Chromic chromium leeching
+pm-ammonium-vanadate-solution=Ammonium vanadate solution
+pm-vanadate-solution=Vanadate solution
+pm-chrominum-leeching=Chromium leeching
+pm-chromic-chrominum-leeching=Chromic chromium leeching
 pm-chromite-seperation=Chromite seperation
-pm-ferrochrominum-carbon-seperation=Ferrochromium seperation
+pm-ferrochrominum-carbon-seperation=Ferro-chromium seperation
 pm-chromic-acid-neutralisation=Chromic acid neutralisation
 pm-basic-bastnasite=Basic mixed bastnasite
 pm-yttrium-fluoride=Aqueous yttrium fluoride
@@ -1057,8 +1060,9 @@ pm-ammonia-trace-gas-seperation=Ammonia-trace gas seperation
 pm-bismuth-carbon-dioxide-electrolysis=Bismuth-based CO2 electrolysis
 pm-zirconia-carbon-dioxide-electrolysis=Zirconia-based CO2 electrolysis
 pm-trace-gas-seperation=Trace gas seperation
-pm-nimop-gas-water-electrolysis=NNiMoP water electrolysis
-pm-hydrogen-bromide-leeching=Hydrogen bromide leeching
+pm-nimop-gas-water-electroylsis=NNiMoP water electrolysis
+pm-hydrogen-bromine-leeching=Hydrogen bromide leeching
+pm-hydrogen-bromide-seperation=Hydrogen bromide seperation
 pm-acidic-water-to-sulfuric-acid=Acidic water to sulfuric acid
 pm-sulfur-burning=Sulfur burning
 pm-water-deacifying=Acidic water neutralisation
@@ -1079,18 +1083,42 @@ pm-myostatin-fixing=Myostatin fixing
 pm-agar-dish-emptying=Agar dish emptying
 pm-bacteriaed-dish-emptying=Bacteria'ed dish emptying
 pm-cyanobacteriaed-dish-emptying=Cyanobacteria'ed dish emptying
+pm-calcium-brine=Calcium-based brine
+pm-sodium-brine=Sodium-based brine
+pm-low-concentration-lithium-leeching=Low concentraction lithium leeching
+pm-medium-concentration-lithium-leeching=Medium concentraction lithium leeching
+pm-high-concentration-lithium-leeching=High concentraction lithium leeching
+pm-oversaturated-concentration-lithium-leeching=Oversaturated lithium leeching
+pm-lithium-chloride-electrolysis=Lithium chloride electrolysis
+pm-seawater-evaporite=Seawater evaporite
+pm-sylvite-seperation=Sylvite seperation
+pm-anhydrite-seperation=Anhydrite seperation
+pm-potash-potassium=Potash-based potassium
+pm-70-to-100-rubidium-alum=70% to 100% rubidium alum
+pm-50-to-70-rubidium-alum=50% to 70% rubidium alum
+pm-30-to-50-rubidium-alum=305 to 50% rubidium alum
+pm-rubidium-alum-seperation=Rubidium alum seperation
+pm-pollucite-leeching=Pollucite leeching
+pm-pollucite-crushing=Pollucite crushing
+pm-pollucite-seperation=Pollucite seperation
+pm-calcite-filtering=Calcite filtering
+pm-calcite-crushing=Calcite crushing
+pm-fuel-oil-seperation=Fuel oils seperation
+pm-chromic-gold-leeching=Chromic gold leeching
+pm-francium-forming=Francium forming
+pm-industrial-grade-silicon-ore=Industrial-grade silicon ore
 
 pm-iron-melting=Iron plate melting
 pm-copper-melting=Copper plate melting
 pm-nickel-melting=Nickel plate melting
 pm-zinc-melting=Zinc plate melting
-pm-manganese--melting=Manganese plate melting
+pm-manganese-melting=Manganese plate melting
 pm-gold-melting=Gold plate melting
 pm-silver-melting=Silver plate melting
 pm-titanium-melting=Titanium plate melting
-pm-titanium-argon-melting=Titanium argon plate melting
+pm-argon-titanium-melting=Titanium argon plate melting
 pm-tungsten-melting=Tungsten plate melting
-pm-tungsten-argon-melting=Tungsten argon plate melting
+pm-argon-tungsten-melting=Tungsten argon plate melting
 pm-palladium-melting=Palladium plate melting
 pm-platinum-melting=Platinum plate melting
 pm-aluminium-melting=Aluminium plate melting
@@ -1222,8 +1250,8 @@ pm-washing-plant=Washing plant
 pm-pollution-filtering=Pollution air filtering
 pm-palladium-processing=Palladium processing
 pm-vanadium-processing=Vanadium processing
-pm-chrominum-processing=Chromium processing
-pm-chromic-acid-leeching=Chromic acid advanced leeching
+pm-chromium-processing=Chromium processing
+pm-chromic-acid-leeching=Chromic acid leeching
 pm-chemical-resin=Chemical based resin
 pm-advanced-polyethylene-plastic=Advanced Polyethylene plastic production
 pm-molten-alloys=Molten Alloys
