@@ -4,7 +4,7 @@ pm-post-transition-metals-ore=Mineral de metales de post-transición
 pm-nickel-ore=Mineral de níquel
 pm-manganese-ore=Mineral de manganeso
 pm-zinc-ore=Mineral de zinc
-pm-silicon-ore=Mineral de silicio
+pm-industrial-grade-silicon-ore=Mineral de silicio
 pm-gold-ore=Mineral de oro
 pm-silver-ore=Mineral de plata
 pm-molybdenum-ore=Mineral de molibdeno
