@@ -4,7 +4,7 @@ pm-post-transition-metals-ore=
 pm-nickel-ore=
 pm-manganese-ore=
 pm-zinc-ore=
-pm-silicon-ore=
+pm-industrial-grade-silicon-ore=
 pm-gold-ore=
 pm-silver-ore=
 pm-molybdenum-ore=
