@@ -6,7 +6,7 @@ pm-mettaloid-ore=Minerai de métalloïdes
 pm-nickel-ore=Minerai de nickel
 pm-manganese-ore=Minerai de manganèse
 pm-zinc-ore=Minerai de zinc
-pm-silicon-ore=Minerai de silice
+pm-industrial-grade-silicon-ore=Minerai de silice
 pm-gold-ore=Minerai d'or
 pm-silver-ore=Minerai d'argent
 pm-molybdenum-ore=Minerai de molybdène
