@@ -6,7 +6,7 @@ pm-metalloid-ore=Yarı metal cevheri
 pm-nickel-ore=Nikel cevheri
 pm-manganese-ore=Manganez cevheri
 pm-zinc-ore=Çinko cevheri
-pm-silicon-ore=Silisyum cevheri
+pm-industrial-grade-silicon-ore=Silisyum cevheri
 pm-gold-ore=Altın cevheri
 pm-silver-ore=Gümüş cevheri
 pm-molybdenum-ore=Molibden cevheri
