@@ -979,6 +979,7 @@ data:extend({
     name = "pm-saw",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/saw.png",
+    subgroup = "pm-intermediates",
     stack_size = 50
   },
   {
