@@ -7,6 +7,8 @@ Date: 2024-11-30
     - Added an early game way to grow wood. Not using pills.
     - Actually added the yttrium plastic pellet recipe. whoops! it'll be moved into its own technology.. soon...
 
+  Changes:
+    - Moved the saw into the intermediates tab.
   Fixes:
     - ACTUTALLY fixed dirty boilers fluid boxes being fucked.
     - Added locales for chunk plate recipes.
@@ -15,6 +17,7 @@ Date: 2024-11-30
     - Added essenitally every locale missing.
     - Migrated a lot of recipes to make said locales easier.
     - Moved garnet saws, hydrogen peroxide and atmosphere recipes into subgroups.
+    - Fixed the best recipe of water electrolysis not being disabled by default.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.003
